CLM-45067-Rebuild hosted-repo read endpoints on HRC + policy_evaluation  (#16982)
Co-authored-by: bhavat.arora <bhavat.arora@sonatype.com>
Co-authored-by: shubham-kr28 <shubham.kumar@sonatype.com>
Co-authored-by: Claude Opus 4.7 (1M context) <noreply@anthropic.com>
Co-authored-by: abhijit.dhara <EtiosCross@6060>
Co-authored-by: Ashu Tiwary <ashu.tiwary@sonatype.com>